--- a/documentation/asciidoc/topics/proc_adding_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_credentials.adoc
@@ -22,7 +22,7 @@ include::yaml/indentities.yaml[]
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ {oc_create} secret generic --from-file=identities.yaml connect-secret
+{oc_create} secret generic --from-file=identities.yaml connect-secret
 ----
 +
 . Specify the authentication secret with `spec.security.endpointSecretName` in your `Infinispan` CR and then apply the changes.
