--- a/documentation/asciidoc/topics/proc_changing_operator_password.adoc
+++ b/documentation/asciidoc/topics/proc_changing_operator_password.adoc
@@ -8,7 +8,7 @@ You can change the password for the `operator` user if you do not want to use th
 
 * Update the `password` key in the `{example_crd_name}-generated-operator-secret` secret as follows:
 +
-[source,bash,options="nowrap",subs=attributes+]
+[source,options="nowrap",subs=attributes+]
 ----
 {oc} patch secret {example_crd_name}-generated-operator-secret -p='{"stringData":{"password": "supersecretoperatorpassword"}}'
 ----
