--- a/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
@@ -20,7 +20,7 @@ When you delete the `Infinispan` CR, {k8s} also automatically deletes the associ
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ {oc_apply_cr} tls_secret.yaml
+{oc_apply_cr} tls_secret.yaml
 ----
 +
 . Specify the encryption secret with the `spec.security.endpointEncryption.certSecretName` field in your
