--- a/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
@@ -1,6 +1,1 @@
-$ {oc_get_secret} {example_crd_name}-generated-secret \
--o jsonpath="{.data.identities\.yaml}" | base64 --decode
-
-credentials:
-- username: developer
-  password: dIRs5cAAsHIeeRIL
+{oc_get_secret} {example_crd_name}-generated-secret -o jsonpath="{.data.identities\.yaml}" | base64 --decode
