--- a/documentation/asciidoc/topics/proc_restoring_cluster.adoc
+++ b/documentation/asciidoc/topics/proc_restoring_cluster.adoc
@@ -45,7 +45,7 @@ include::yaml/backup_resources.yaml[]
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ {oc_apply_cr} my-restore.yaml
+{oc_apply_cr} my-restore.yaml
 ----
 
 .Verification
