--- a/documentation/asciidoc/topics/proc_setting_up_cross_site_kube.adoc
+++ b/documentation/asciidoc/topics/proc_setting_up_cross_site_kube.adoc
@@ -12,8 +12,8 @@ During OLM installation, {ispn_operator} sets up cluster roles required for cros
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ {oc_apply_cr} config/rbac/role.yaml
-$ {oc_apply_cr} config/rbac/role_binding.yaml
+{oc_apply_cr} config/rbac/role.yaml
+{oc_apply_cr} config/rbac/role_binding.yaml
 ----
 
 . If you run {ispn_operator} in any Kubernetes deployment (Minikube, Kind, and so on), you should create secrets that contain the files that allow Kubernetes clusters to authenticate with each other.
@@ -24,12 +24,12 @@ Do one of the following:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ kubectl create serviceaccount site-a -n ns-site-a
-$ kubectl create clusterrole xsite-cluster-role --verb=get,list,watch --resource=nodes,services
-$ kubectl create clusterrolebinding xsite-cluster-role-binding --clusterrole=xsite-cluster-role --serviceaccount=ns-site-a:site-a
-$ TOKENNAME=kubectl get serviceaccount/site-a -o jsonpath='{.secrets[0].name}' -n ns-site-a
-$ TOKEN=kubectl get secret $TOKENNAME -o jsonpath='{.data.token}' -n ns-site-a | base64 --decode
-$ kubectl create secret generic site-a-secret -n ns-site-a --from-literal=token=$TOKEN
+kubectl create serviceaccount site-a -n ns-site-a
+kubectl create clusterrole xsite-cluster-role --verb=get,list,watch --resource=nodes,services
+kubectl create clusterrolebinding xsite-cluster-role-binding --clusterrole=xsite-cluster-role --serviceaccount=ns-site-a:site-a
+TOKENNAME=kubectl get serviceaccount/site-a -o jsonpath='{.secrets[0].name}' -n ns-site-a
+TOKEN=kubectl get secret $TOKENNAME -o jsonpath='{.data.token}' -n ns-site-a | base64 --decode
+kubectl create secret generic site-a-secret -n ns-site-a --from-literal=token=$TOKEN
 ----
 +
 * Create secrets on each site that contain `ca.crt`, `client.crt`, and `client.key` from your Kubernetes installation.
@@ -38,7 +38,7 @@ For example, for Minikube do the following on **LON**:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ kubectl create secret generic site-a-secret \
+kubectl create secret generic site-a-secret \
     --from-file=certificate-authority=/opt/minikube/.minikube/ca.crt \
     --from-file=client-certificate=/opt/minikube/.minikube/client.crt \
     --from-file=client-key=/opt/minikube/.minikube/client.key
