--- a/documentation/asciidoc/topics/con_cross_site_expose_types.adoc
+++ b/documentation/asciidoc/topics/con_cross_site_expose_types.adoc
@@ -2,7 +2,7 @@
 = Cross-site replication expose types
 
 [role="_abstract"]
-You can use a `NodePort` service or a `LoadBalancer` service to handle network traffic for backup operations between {brandname} clusters.
+You can use a `NodePort` service, a `LoadBalancer` service, or an {openshiftshort} `Route` to handle network traffic for backup operations between {brandname} clusters.
 Before you start setting up cross-site replication you should determine what expose type is available for your {openshift} cluster.
 In some cases you may require an administrator to provision services before you can configure an expose type.
 
@@ -15,11 +15,26 @@ In most cases, an administrator must also configure DNS routing for those extern
 
 .`LoadBalancer`
 
-A `LoadBalancer` is service that directs network traffic to the correct node in the {openshiftshort} cluster.
+A `LoadBalancer` is a service that directs network traffic to the correct node in the {openshiftshort} cluster.
 
 Whether you can use a `LoadBalancer` as the expose type for cross-site replication depends on the host platform.
 AWS supports network load balancers (NLB) while some other cloud platforms do not.
 To use a `LoadBalancer` service, an administrator must first create an ingress controller backed by an NLB.
+
+.`Route`
+
+An {openshiftshort} `Route` allows {brandname} clusters to connect with each other through a secure URL.
+
+{ispn_operator} creates routes with TLS passthrough encryption.
+For this reason, you must provide keystores and secure cross-site connections with the `spec.service.sites.local.encryption` field to use a `Route` for cross-site replication.
+
+[NOTE]
+====
+You cannot manually create a `Route` and use it for cross-site replication.
+ifdef::community[]
+Likewise it is not possible to use Kubernetes ingress instead of a route.
+endif::community[]
+====
 
 [role="_additional-resources"]
 .Additional resources
