--- a/documentation/asciidoc/topics/ref_cross_site_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cross_site_resources.adoc
@@ -24,13 +24,16 @@ The following tables provides fields and descriptions for cross-site resources.
 |Names the local site where a {brandname} cluster runs.
 
 |`service.sites.local.expose.type`
-|Specifies the network service for cross-site replication. {brandname} clusters use this service to communicate and perform backup operations. You can set the value to `NodePort` or `LoadBalancer`.
+|Specifies the network service for cross-site replication. {brandname} clusters use this service to communicate and perform backup operations. You can set the value to `NodePort`, `LoadBalancer`, or `Route`.
 
 |`service.sites.local.expose.nodePort`
 |Specifies a static port within the default range of `30000` to `32767` if you expose {brandname} through a `NodePort` service. If you do not specify a port, the platform selects an available one.
 
 |`service.sites.local.expose.port`
 |Specifies the network port for the service if you expose {brandname} through a `LoadBalancer` service. The default port is `7900`.
+
+|`service.sites.local.expose.routeHostName`
+|Specifies a custom hostname if you expose {brandname} through an {openshiftshort} `Route`. If you do not set a value then {openshiftshort} generates a hostname.
 
 |`service.sites.local.maxRelayNodes`
 |Specifies the maximum number of pods that can send RELAY messages for cross-site replication. The default value is `1`.
