--- a/documentation/asciidoc/stories/assembly_upgrading_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_upgrading_clusters.adoc
@@ -14,6 +14,16 @@ ifdef::community[]
 ====
 endif::community[]
 
+//Downstream content
+ifdef::downstream[]
+[IMPORTANT]
+====
+Hot Rod rolling upgrades are available as a technology preview feature.
+====
+
+include::{topics}/ref_tech_preview.adoc[leveloffset=+1]
+endif::downstream[]
+
 include::{topics}/con_cluster_upgrades.adoc[leveloffset=+1]
 include::{topics}/proc_upgrading_clusters_downtime.adoc[leveloffset=+1]
 include::{topics}/proc_upgrading_clusters_rolling.adoc[leveloffset=+1]
